# 3D-Investigation

./: .gitignore  CMakeLists.txt  Instructions.md  README.md  run_tests.bat  vcpkg.json
.github/workflows/: build.yml
.prompts/: bugfix.md  feature.md  refactor.md
.review/: checklist.md
.tasks/: README.md  task-template.md
3DRecontruction/templeRing/: recon_cache.ply
AITraining/: StartChatbotServer.py  TrainModel.py  requirements.txt
AITraining/Models/: yolo11x-tracking.onnx
AITraining/runs/detect/train/: args.yaml  events.out.tfevents.1778336469.NhatPhong.24272.0
AITraining/runs/segment/train/: args.yaml  events.out.tfevents.1778336657.NhatPhong.24272.1  results.csv
Config/: chat_history.json  chat_sessions.json  config.ini
Docs/: Requirement with 3D tools.docx  WBS.docx
Doxygen/: Doxyfile  README.md
scripts/: agent_pipeline.ps1  agent_pipeline.sh
src/app/: AppConstants.h  AppShell.cpp  AppShell.h  Main.cpp  MainWindow.cpp  MainWindow.h  StyleManager.cpp  StyleManager.h
src/core/: AIMode.h  AppConfig.cpp  AppConfig.h  Global.h  IAIService.h  IAppContext.h  IMailService.h  IPlugin.h  IReconstructionService.h  ISceneService.h  ISettingsService.h  IViewerService.h  LanguageManager.cpp  LanguageManager.h  ServiceRegistry.h  SignalBus.cpp  SignalBus.h  SmtpMailer.cpp  SmtpMailer.h  UserManager.cpp  UserManager.h
src/modules/: CMakeLists.txt
src/modules/AIAssistantPlugin/: AIAssistantPlugin.cpp  AIAssistantPlugin.h  AIAssistantRibbonUI.cpp  AIAssistantRibbonUI.h  CMakeLists.txt  ChatBotDockWidget.cpp  ChatBotDockWidget.h  ChatMessageRenderer.cpp  ChatMessageRenderer.h  ChatTemplates.h
src/modules/AIProcessorPlugin/: AIProcessorPlugin.cpp  AIProcessorPlugin.h  AIProcessorRibbonUI.cpp  AIProcessorRibbonUI.h  AITrainDockWidget.cpp  AITrainDockWidget.h  CMakeLists.txt  VideoTrackerThread.cpp  VideoTrackerThread.h
src/modules/ReconstructionPlugin/: CMakeLists.txt  ReconstructionListUI.cpp  ReconstructionListUI.h  ReconstructionPlugin.cpp  ReconstructionPlugin.h  ReconstructionRibbonUI.cpp  ReconstructionRibbonUI.h
src/modules/SendMailPlugin/: CMakeLists.txt  MailDockWidget.cpp  MailDockWidget.h  SendMailPlugin.cpp  SendMailPlugin.h  SendMailRibbonUI.cpp  SendMailRibbonUI.h
src/modules/UserAuthPlugin/: AboutDialog.cpp  AboutDialog.h  AdminUserManagerDialog.cpp  AdminUserManagerDialog.h  AvatarCropperDialog.cpp  AvatarCropperDialog.h  CMakeLists.txt  ChangePasswordDialog.cpp  ChangePasswordDialog.h  ForgotPasswordDialog.cpp  ForgotPasswordDialog.h  LicenseActivationDialog.cpp  LicenseActivationDialog.h  LoginDialog.cpp  LoginDialog.h  SettingsDialog.cpp  SettingsDialog.h  ThemeSelectionDialog.cpp  ThemeSelectionDialog.h  UserAuthPlugin.cpp  UserAuthPlugin.h
src/modules/ViewerPlugin/: CMakeLists.txt  ViewerNavigatorUI.cpp  ViewerNavigatorUI.h  ViewerPlugin.cpp  ViewerPlugin.h  ViewerRibbonUI.cpp  ViewerRibbonUI.h
src/services/ai/: AIAssistant.cpp  AIAssistant.h  AIProcessor.cpp  AIProcessor.h  AIService.cpp  AIService.h
src/services/mail/: MailService.cpp  MailService.h
src/services/reconstruction/: FeatureExtractor.cpp  FeatureExtractor.h  FeatureMatcher.cpp  FeatureMatcher.h  PointCloudFilter.cpp  PointCloudFilter.h  PoseEstimator.cpp  PoseEstimator.h  ReconstructThread.cpp  ReconstructThread.h  ReconstructionConfig.h  ReconstructionPipeline.cpp  ReconstructionPipeline.h  ReconstructionService.cpp  ReconstructionService.h  Triangulator.cpp  Triangulator.h
src/services/scene/: CrosshairManager.cpp  CrosshairManager.h  SceneService.cpp  SceneService.h
src/services/settings/: SettingsService.cpp  SettingsService.h
src/services/viewer/: ChatImageViewer.cpp  ChatImageViewer.h  DicomLoader.cpp  DicomLoader.h  Image2DLoader.cpp  Image2DLoader.h  Model3DLoader.h  ViewerService.cpp  ViewerService.h
src/utils/: CustomProgressDialog.cpp  CustomProgressDialog.h  FileUtilities.cpp  FileUtilities.h  HtmlUtilities.cpp  HtmlUtilities.h  IconFactory.cpp  IconFactory.h  Logger.cpp  Logger.h  ModernDialog.cpp  ModernDialog.h  ModernMessageBox.h
tests/: CMakeLists.txt  TestAppConfig.cpp  TestLanguageManager.cpp  TestPointCloudFilter.cpp  TestReconstructionPipeline.cpp  TestServiceRegistry.cpp  TestSignalBus.cpp
translations/: translations_en.json  translations_vi.json
